--- a/Utilities/Configuration/Configuration.local.json
+++ b/Utilities/Configuration/Configuration.local.json
@@ -1,7 +1,7 @@
 {
-    "MongoConversationDbConnection":"mongodb://127.0.0.1:27017/Conversation",
+    "MongoConversationDbConnection":"mongodb://usermanager:sairam0168@ds237669.mlab.com:37669/usermanager",
     "MySqlDbConnection":"http://127.0.0.1:3001/",
-    "MySqlDbConfiguration":{"host": "127.0.0.1","user": "root","password": "sairam0168","database": "migrate2","charset": "utf8",
+    "MySqlDbConfiguration":{"host": "182.50.133.89","port":"3306","user": "usermanagement","password": "sairam0168","database": "usermanagement","charset": "utf8",
         "multipleStatements": true},
     "TokenSecret":"sairam0168",
     "RefreshTokenSecret":"sairam0168",
