--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "njwt": "^0.4.0",
     "nodemailer": "^4.6.4",
     "password-generator": "^2.2.0",
-    "request-ip": "^2.0.2"
+    "request-ip": "^2.0.2",
+    "validator": "^9.4.1"
   },
   "devDependencies": {}
 }
