--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
+    "joi": "^13.2.0",
     "knex": "^0.14.5",
     "moment": "^2.22.0",
     "mongoose": "^5.0.13",
